--- a/playbook1.yaml
+++ b/playbook1.yaml
@@ -45,7 +45,7 @@
         vg: "{{ vg_name }}"
         pvs: "{{ adg_pvs }}"
     - name: Create mirrored logical volume (RAID1)
-      command: "lvcreate -L100%FREE -m1 -n {{ lv_name }} {{ vg_name }}"
+      command: "lvcreate -L 10G -m1 -n {{ lv_name }} {{ vg_name }}"
       environment:
         PATH: "/sbin:/usr/sbin:{{ ansible_env.PATH }}"
       args:
