--- a/playbook1.yaml
+++ b/playbook1.yaml
@@ -24,17 +24,29 @@
   tasks:
 
 
-    - name: Remount /adguardhome with exec option
-      mount:
-        path: /adguardhome
-        src: "/dev/{{ vg_name }}/{{ lv_name }}"
-        fstype: ext4
-        opts: defaults,exec
-        state: mounted
+    - name: Create installation directory for AdGuardHome
+      file:
+        path: /opt/adguardhome
+        state: directory
+        owner: root
+        group: root
+        mode: '0755'
+    - name: Download AdGuard Home
+      get_url:
+        url: "{{ adguard_download_url }}"
+        dest: /tmp/AdGuardHome.tar.gz
+
+    - name: Extract AdGuard Home
+      unarchive:
+        src: /tmp/AdGuardHome.tar.gz
+        dest: /opt/adguardhome
+        remote_src: yes   
+        extra_opts: ["--strip-components=1"]
+
 
     - name: Ensure ownership and permissions
       file:
-        path: /adguardhome/AdGuardHome
+        path: /opt/adguardhome/AdGuardHome
         owner: root
         group: root
         mode: '0755'
