--- a/playbook1.yaml
+++ b/playbook1.yaml
@@ -58,7 +58,7 @@
         mode: "0755"
 
     - name: Install AdGuardHome as systemd service
-      command: "{{ mount_point }}/AdGuardHome -s install"
+      command: /opt/adguardhome/AdGuardHome -s install
       args:
         creates: /etc/systemd/system/AdGuardHome.service
 
