--- a/playbook4.yaml
+++ b/playbook4.yaml
@@ -24,76 +24,74 @@
       - id: "Mozilla.Firefox"
   tasks:
 
-  - name: Utwórz pulę dyskową i skonfiguruj tiering + wirtualny dysk (PowerShell)
-    ansible.windows.win_powershell:
-      script: |
-        $poolName = "{{ pool_name }}"
-        $vdName = "{{ vdisk_name }}"
-        $driveLetter = "F"
+  - name: Utwórz pulę dyskową, storage tiers i wirtualny dysk F: (PowerShell)
+  ansible.windows.win_powershell:
+    script: |
+      $poolName = "{{ pool_name }}"
+      $vdName = "{{ vdisk_name }}"
+      $driveLetter = "{{ vd_drive_letter }}"
 
-        $canpool = Get-PhysicalDisk -CanPool $true
+      $canpool = Get-PhysicalDisk -CanPool $true
 
-        if ($canpool.Count -lt 1) {
-          Write-Error "Brak dysków z CanPool=True. Sprawdź, czy dyski są dodane i dostępne."
-          exit 1
-        }
+      if ($canpool.Count -lt 1) {
+        Write-Error "Brak dysków z CanPool=True."
+        exit 1
+      }
 
-        if (-not (Get-StoragePool -FriendlyName $poolName -ErrorAction SilentlyContinue)) {
-          New-StoragePool -FriendlyName $poolName -StorageSubSystemFriendlyName "Storage Spaces*" -PhysicalDisks $canpool
-        } else {
-          Write-Output "StoragePool $poolName już istnieje."
-        }
+      $pool = Get-StoragePool -FriendlyName $poolName -ErrorAction SilentlyContinue
 
-        $pool = Get-StoragePool -FriendlyName $poolName
+      if (-not $pool) {
+        $pool = New-StoragePool -FriendlyName $poolName -StorageSubSystemFriendlyName "Storage Spaces*" -PhysicalDisks $canpool
+        Write-Output "Storage Pool $poolName utworzony."
+      } else {
+        Write-Output "Storage Pool $poolName już istnieje."
+      }
+      $ssdTier = Get-StorageTier -FriendlyName "SSDTier" -ErrorAction SilentlyContinue
+      if (-not $ssdTier) {
+        $ssdTier = $pool | New-StorageTier -FriendlyName "SSDTier" -MediaType SSD
+        Write-Output "Tier SSD utworzony."
+      }
 
-        if (-not ($pool | Get-StorageTier -FriendlyName "SSDTier" -ErrorAction SilentlyContinue)) {
-          $null = $pool | New-StorageTier -FriendlyName "SSDTier" -MediaType SSD
-        }
-        if (-not ($pool | Get-StorageTier -FriendlyName "HDDTier" -ErrorAction SilentlyContinue)) {
-          $null = $pool | New-StorageTier -FriendlyName "HDDTier" -MediaType HDD
-        }
+      $hddTier = Get-StorageTier -FriendlyName "HDDTier" -ErrorAction SilentlyContinue
+      if (-not $hddTier) {
+        $hddTier = $pool | New-StorageTier -FriendlyName "HDDTier" -MediaType HDD
+        Write-Output "Tier HDD utworzony."
+      }
 
-        $ssdTier = Get-StorageTier -FriendlyName "SSDTier" -ErrorAction SilentlyContinue
-        $hddTier = Get-StorageTier -FriendlyName "HDDTier" -ErrorAction SilentlyContinue
+      $ssdSize = ($pool | Get-PhysicalDisk | where MediaType -eq SSD | Measure-Object Size -Sum).Sum
+      $hddSize = ($pool | Get-PhysicalDisk | where MediaType -eq HDD | Measure-Object Size -Sum).Sum
 
-        $useTiering = ($ssdTier -and $hddTier)
+      if (-not (Get-VirtualDisk -FriendlyName $vdName -ErrorAction SilentlyContinue)) {
+        New-VirtualDisk `
+          -StoragePoolFriendlyName $poolName `
+          -FriendlyName $vdName `
+          -ResiliencySettingName Mirror `
+          -StorageTiers @($ssdTier, $hddTier) `
+          -StorageTierSizes @($ssdSize, $hddSize)
 
-        if (-not (Get-VirtualDisk -FriendlyName $vdName -ErrorAction SilentlyContinue)) {
-          if ($useTiering) {
-            $poolSize = ($pool | Get-StoragePool).Size
-            New-VirtualDisk -StoragePoolFriendlyName $poolName -FriendlyName $vdName -UseMaximumSize -ResiliencySettingName Mirror -ProvisioningType Thin -StorageTiers @($ssdTier,$hddTier) -StorageTierSizes @(0,0)
-          } else {
-            New-VirtualDisk -StoragePoolFriendlyName $poolName -FriendlyName $vdName -UseMaximumSize -ResiliencySettingName Mirror -ProvisioningType Thin
-          }
-        } else {
-          Write-Output "VirtualDisk $vdName już istnieje."
-        }
+        Write-Output "VirtualDisk $vdName utworzony."
+      } else {
+        Write-Output "VirtualDisk $vdName już istnieje."
+      }
 
-        $vd = Get-VirtualDisk -FriendlyName $vdName
-        $disk = $vd | Get-Disk
+      $vd = Get-VirtualDisk -FriendlyName $vdName
+      $disk = $vd | Get-Disk
 
-        if ($disk) {
-          if ($disk.IsOffline) { Set-Disk -Number $disk.Number -IsOffline $false }
-          if ($disk.PartitionStyle -eq 'RAW') {
-            Initialize-Disk -Number $disk.Number -PartitionStyle GPT -PassThru | Out-Null
-            New-Partition -DiskNumber $disk.Number -UseMaximumSize -DriveLetter $driveLetter | Out-Null
-            Format-Volume -DriveLetter $driveLetter -FileSystem ReFS -Confirm:$false | Out-Null
-          } else {
-            $part = $disk | Get-Partition | Where-Object DriveLetter -eq $driveLetter
-            if (-not $part) {
-              New-Partition -DiskNumber $disk.Number -UseMaximumSize -DriveLetter $driveLetter | Out-Null
-              Format-Volume -DriveLetter $driveLetter -FileSystem ReFS -Confirm:$false | Out-Null
-            } else {
-              Write-Output "Partycja z literą $driveLetter już istnieje."
-            }
-          }
-        } else {
-          Write-Error "Nie znaleziono dysku wirtualnego po utworzeniu VirtualDisk."
-          exit 1
-        }
+      if ($disk.IsOffline) {
+        Set-Disk -Number $disk.Number -IsOffline $false
+      }
 
-        Write-Output "Storage Pool i Virtual Disk utworzone / skonfigurowane."
-    register: storage_result
+      if ($disk.PartitionStyle -eq 'RAW') {
+        Initialize-Disk -Number $disk.Number -PartitionStyle GPT
+        New-Partition -DiskNumber $disk.Number -UseMaximumSize -DriveLetter $driveLetter | Out-Null
+        Format-Volume -DriveLetter $driveLetter -FileSystem ReFS -Confirm:$false | Out-Null
+        Write-Output "Dysk $driveLetter: sformatowany w ReFS."
+      } else {
+        Write-Output "Dysk już zainicjalizowany."
+      }
+
+      Write-Output "Dysk $driveLetter: gotowy."
+  register: storage_result
 
   - name: Utwórz lokalną grupę Kierownicy_langier
     ansible.windows.win_group:
